<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_directory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/et_directory_hint"
            android:layout_weight="0.6"/>

        <EditText
            android:id="@+id/et_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/et_file_hint"
            android:layout_weight="0.3"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/rb_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_internal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_internal_txt"
                android:checked="true"
                android:layout_weight="1"/>

            <RadioButton
                android:id="@+id/rb_sd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_sd_txt"
                android:layout_weight="1"/>

            <RadioButton
                android:id="@+id/rb_raw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_raw_txt"
                android:layout_weight="1"/>
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/cb_overwrite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_overwrite_txt"
            android:layout_weight="1"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/et_sentences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_sentences_hint"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_write_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_write_add_txt"
            android:textScaleX="0.5"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btn_read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_read_txt"
            android:textScaleX="0.7"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_delete_txt"
            android:textScaleX="0.7"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btn_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_list_txt"
            android:textScaleX="0.7"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autoLink="web"/>
    </LinearLayout>
</LinearLayout>